; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_in_mcast.c_inm_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_in_mcast.c_inm_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_multi = type { i32 }
%struct.ifnet = type { i32 }
%struct.in_addr = type { i32 }
%struct.epoch_tracker = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.in_multi* @inm_lookup(%struct.ifnet* %0, i32 %1) #0 {
  %3 = alloca %struct.in_addr, align 4
  %4 = alloca %struct.ifnet*, align 8
  %5 = alloca %struct.epoch_tracker, align 4
  %6 = alloca %struct.in_multi*, align 8
  %7 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %3, i32 0, i32 0
  store i32 %1, i32* %7, align 4
  store %struct.ifnet* %0, %struct.ifnet** %4, align 8
  %8 = call i32 (...) @IN_MULTI_LIST_LOCK_ASSERT()
  %9 = getelementptr inbounds %struct.epoch_tracker, %struct.epoch_tracker* %5, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @NET_EPOCH_ENTER(i32 %10)
  %12 = load %struct.ifnet*, %struct.ifnet** %4, align 8
  %13 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.in_multi* @inm_lookup_locked(%struct.ifnet* %12, i32 %14)
  store %struct.in_multi* %15, %struct.in_multi** %6, align 8
  %16 = getelementptr inbounds %struct.epoch_tracker, %struct.epoch_tracker* %5, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @NET_EPOCH_EXIT(i32 %17)
  %19 = load %struct.in_multi*, %struct.in_multi** %6, align 8
  ret %struct.in_multi* %19
}

declare dso_local i32 @IN_MULTI_LIST_LOCK_ASSERT(...) #1

declare dso_local i32 @NET_EPOCH_ENTER(i32) #1

declare dso_local %struct.in_multi* @inm_lookup_locked(%struct.ifnet*, i32) #1

declare dso_local i32 @NET_EPOCH_EXIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
